# Assignment

./: .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  ui5-local.yaml  ui5.yaml
.github/: dependabot.yml
api/: api_service.py  api_test.py
data/: reviews_v1_hiring_task.csv
failed_expt/: bert_rating_predictor.py  bertt_training.py  data_preprocessing_clustering.py  failed-expt(1).ipynb  rating_predictor.py  trainingbert.py
models/: RAG.py  multiple_queries.py  preprocess.py  rating_predict.py  rating_predict_test.py
notebook/: predict_rating.ipynb
webapp/: Component.js  index.html  manifest.json
webapp/controller/: App.controller.js  sapui5app.controller.js  secondpage.controller.js
webapp/i18n/: i18n.properties
webapp/model/: products.json
webapp/test/: flpSandbox.html  flpSandbox.js  testsuite.qunit.html
webapp/test/integration/: AllJourneys.js  NavigationJourney.js  opaTests.qunit.html  opaTests.qunit.js
webapp/test/integration/arrangements/: Startup.js
webapp/test/integration/pages/: sapui5app.js
webapp/test/unit/: AllTests.js  unitTests.qunit.html  unitTests.qunit.js
webapp/test/unit/controller/: sapui5app.controller.js
webapp/view/: App.view.xml  sapui5app.view.xml  secondpage.view.xml
